kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kunjika-deployment
  labels:
    app: kunjika
spec:
  template:
    metadata:
      labels:
        app: kunjika
    spec:
      containers:
        - name: backend
          image: kunjika-backend:nightly
          ports:
            - containerPort: 8000
        - name: frontend
          image: kunjika-frontend:nightly
          ports:
            - containerPort: 3000
  selector:
    matchLabels:
      app: kunjika
---
apiVersion: v1
kind: Service
metadata:
  name: kunjika-backend-service
spec:
  selector:
    app: kunjika
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      name: backend
---
apiVersion: v1
kind: Service
metadata:
  name: kunjika-frontend-service
spec:
  selector:
    app: kunjika
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: '*.mydomain.com'
      http:
        paths:
          - path: /
            backend:
              service:
                name: kunjika-frontend-service
                port:
                  number: 3000
            pathType: Prefix
          - path: /api/v1
            backend:
              service:
                name: kunjika-backend-service
                port:
                  number: 8000
            pathType: Prefix
